--- a/TodoApp/app/src/main/res/values/strings.xml
+++ b/TodoApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TodoApp</string>
     <string name="new_item_hint_text">Add a new item</string>
+    <string name="new_item_button_text">Add</string>
 </resources>
