--- a/TodoApp/app/src/main/res/values/strings.xml
+++ b/TodoApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TodoApp</string>
     <string name="new_item_hint_text">Add a new item</string>
     <string name="new_item_button_text">Add</string>
+    <string name="update_item_button_text">Update Item</string>
 </resources>
